--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ header a:hover {
     justify-content: space-between;
 }
 
-#boxes .box {
+#boxes .container .box {
     width: 30%;
     text-align: center;
     padding: 10px;
@@ -179,5 +179,37 @@ header a:hover {
 
 #about .sidebar {
     margin-top: 10px;
+}
+
+/* Services */
+#services .container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-column-gap: 50px;
+}
+
+#services li {
+    padding: 20px;
+    border: 1px solid #ccc;
+    margin-bottom: 5px;
+    background-color: #e6e6e6;
+}
+
+#services .sidebar {
+    margin-top: 10px;
+}
+
+#services input, #services textarea {
+    padding: 5px;
+    width: 90%; 
+}
+
+/* Footer */
+footer {
+    background-color: #2d2b3e;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    margin-top: 20px;
     
 }
